--- a/simpleblog/members/templates/registration/edit_profile_page.html
+++ b/simpleblog/members/templates/registration/edit_profile_page.html
@@ -1,30 +1,52 @@
 {% extends 'base.html' %}
-{% block title %}Edit Profile Page{% endblock %}
+
 {% block content %}
+<h1>Edit Profile</h1>
 
-{% if user.is_authenticated %}
-    {% if user.id == profile.user.id %}
-        <h1>Edit Profile Page...</h1>
-        <br/><br/>
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    
+    <div class="form-group">
+        <label for="id_bio">Bio</label>
+        <textarea name="bio" id="id_bio" rows="4" class="form-control">{{ form.bio.value }}</textarea>
+    </div>
+    
+    <div class="form-group">
+        <label for="id_profile_pic">Profile Picture</label>
+        <input type="file" name="profile_pic" id="id_profile_pic" class="form-control" accept="image/*">
+        {% if form.profile_pic.value %}
+            <div class="mt-2">
+                <img src="{{ form.profile_pic.value.url }}" alt="Profile Image" width="100" height="100">
+            </div>
+        {% endif %}
+    </div>
 
-        <div class="form-group">
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn btn-secondary">Update Profile Page</button>
-            </form>
-        </div>
+    <div class="form-group">
+        <label for="id_website_url">Website URL</label>
+        <input type="url" name="website_url" id="id_website_url" class="form-control" value="{{ form.website_url.value }}">
+    </div>
 
-    {% else %}
+    <div class="form-group">
+        <label for="id_facebook_url">Facebook URL</label>
+        <input type="url" name="facebook_url" id="id_facebook_url" class="form-control" value="{{ form.facebook_url.value }}">
+    </div>
 
-        You are not the correct user to edit this page...
+    <div class="form-group">
+        <label for="id_twitter_url">Twitter URL</label>
+        <input type="url" name="twitter_url" id="id_twitter_url" class="form-control" value="{{ form.twitter_url.value }}">
+    </div>
 
-    {% endif %}
+    <div class="form-group">
+        <label for="id_instagram_url">Instagram URL</label>
+        <input type="url" name="instagram_url" id="id_instagram_url" class="form-control" value="{{ form.instagram_url.value }}">
+    </div>
 
-{% else %}
+    <div class="form-group">
+        <label for="id_pinterest_url">Pinterest URL</label>
+        <input type="url" name="pinterest_url" id="id_pinterest_url" class="form-control" value="{{ form.pinterest_url.value }}">
+    </div>
 
-    You are not allowed here!
-
-{% endif %}
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+</form>
 
 {% endblock %}
